--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,258 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="24" data-price="249.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XtioUs"><img src="https://images-na.ssl-images-amazon.com/images/I/61sTjF5G0qL._SX679_.jpg" alt="Apple iPad (Wi-Fi, 32GB)" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XtioUs">Apple iPad (Wi-Fi, 32GB) - Space Gray (Latest Model), Available Colors: Gold, Silver, Space Gray</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$249.00</span><span class="ori_price">$329.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XtioUs">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="19" data-price="349.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EVpQk6"><img src="https://images-na.ssl-images-amazon.com/images/I/61prWaqml%2BL._SX679_.jpg" alt="Apple iPad (Wi-Fi, 128GB)" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>19% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EVpQk6">Apple iPad (Wi-Fi, 128GB) - Silver (Latest Model), Available Colors: Gold, Silver, Space Gray</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$349.00</span><span class="ori_price">$429.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EVpQk6">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IrZdnR"><img src="https://m.media-amazon.com/images/I/81DJMwMcd5L._AC_UL436_.jpg" alt="HP 23.8-inch FHD IPS Monitor" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IrZdnR">HP 23.8-inch FHD IPS Monitor with Tilt/Height Adjustment and Built-in Speakers (VH240a, Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$139.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IrZdnR">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wtx5dS"><img src="https://m.media-amazon.com/images/I/91K9SyGiyzL._AC_UL436_.jpg" alt="Acer Widescreen Monitor" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wtx5dS">Acer R240HY bidx 23.8-Inch IPS HDMI DVI VGA (1920 x 1080) Widescreen Monitor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$179.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wtx5dS">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="8" data-price="59.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xt8qTf"><img src="https://m.media-amazon.com/images/I/81WFWi9sKlL._AC_UL436_.jpg" alt="Western Digital 2TB Elements Portable External Hard Drive" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>8% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xt8qTf">Western Digital 2TB Elements Portable External Hard Drive - USB 3.0 - WDBU6Y0020BBK-WESN</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$59.99</span><span class="ori_price">$64.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Xt8qTf">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="167.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WOR5qt"><img src="https://m.media-amazon.com/images/I/81khZx00+tL._AC_UL436_.jpg" alt="Samsung T5 Portable SSD" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WOR5qt">Samsung T5 Portable SSD - 1TB - USB 3.1 External SSD (MU-PA1T0B/AM)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$167.99</span><span class="ori_price">$249.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WOR5qt">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="48" data-price="149.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2My23go"><img src="https://m.media-amazon.com/images/I/814fSnCl0eL._AC_UL436_.jpg" alt="Braun Series 7" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>48% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2My23go">Braun Series 7 790cc-4 Electric Foil Shaver with Clean&Charge Station, 1 Count </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$149.94</span><span class="ori_price">$289.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2My23go">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="32" data-price="29.94">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://images-na.ssl-images-amazon.com/images/I/81fu16w1sGL._SX522_.jpg" alt="Braun Cutter Replacement Head" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">Braun Pulsonic Series 7 70S Foil & Cutter Replacement Head, Compatible with Models 790cc, 7865cc, 7899cc, 7898cc, 7893s, 760cc, 797cc, 789cc</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.94</span><span class="ori_price">$43.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="26" data-price="749.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MHolfQ"><img src="https://m.media-amazon.com/images/I/51-oeeCf1zL._AC_UL436_.jpg" alt="Apple MacBook Air" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>26% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MHolfQ">Apple MacBook Air (13", 1.8GHz dual-core Intel Core i5, 8GB RAM, 128GB SSD) - Silver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$749.99</span><span class="ori_price">$999.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MHolfQ">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="36" data-price="95.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MyAMdD"><img src="https://m.media-amazon.com/images/I/61TSAn9KKxL._AC_UL436_.jpg" alt="JBL Portable Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>36% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MyAMdD">JBL Charge 3 JBLCHARGE3BLKAM Waterproof Portable Bluetooth Speaker (Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$95.98</span><span class="ori_price">$149.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MyAMdD">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="16.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JXyuCE"><img src="https://images-na.ssl-images-amazon.com/images/I/81M%2BtQbr03L._UX522_.jpg" alt="Under Armour" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JXyuCE">Under Armour Men's Armour Fleece Twist Pull Over Hoodie</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$16.50</span><span class="ori_price">$55.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JXyuCE">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="7.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K3gCpY"><img src="https://m.media-amazon.com/images/I/818FNW15GxL._AC_UL320_.jpg" alt="Jenga Classic Game" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K3gCpY">Jenga Classic Game</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$7.19</span><span class="ori_price">$14.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K3gCpY">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K21V6x"><img src="https://images-na.ssl-images-amazon.com/images/I/91fHhaQgmDL._SX522_.jpg" alt="LEGO Creator Mighty Dinosaurs" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K21V6x">LEGO Creator Mighty Dinosaurs 31058 Build It Yourself Dinosaur Set, Create a Pterodactyl, Triceratops and T Rex Toy (174 Pieces)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$14.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K21V6x">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ImoorY"><img src="https://m.media-amazon.com/images/I/81PJ7s8nT3L._AC_UL320_.jpg" alt="LEGO Creator 3in1 Deep Sea" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ImoorY">LEGO Creator 3in1 Deep Sea Creatures 31088 Building Kit , New 2019 (230 Piece)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$14.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ImoorY">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="10" data-price="62.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Wfsx5H"><img src="https://images-na.ssl-images-amazon.com/images/I/61a3Xn6v%2BpL._SX522_.jpg" alt="iHealth Air Wireless Fingertip Pulse Oximeter" /></a>
