--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -6,10 +6,10 @@
       <ul class="clearfix">
           <li><a href="/deals/promo_codes">Promo Codes</a></li>
           <li><a href="/deals/bestdeals">Best Deals</a></li>
-          <li><a href="/deals/coupons">Sales & Coupons</a></li>
+          <!-- <li><a href="/deals/coupons">Sales & Coupons</a></li> -->
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
           <li><a href="/deals/quick_search">Quick Search</a></li>
-          <li><a href="/deals/promotions">Promotions</a></li>
+          <!-- <li><a href="/deals/promotions">Promotions</a></li> -->
       </ul>
     </div>
     
@@ -17,10 +17,10 @@
       <ul class="clearfix">
         <li><a href="/deals/promo_codes">PROMO CODES,</a></li>
         <li><a href="/deals/bestdeals">BEST DEALS</a></li>
-        <li><a href="/deals/coupons">SALES & COUPONS,</a></li>
+        <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/quick_search">QUICK SEARCH,</a></li>
-        <li><a href="/deals/promotions">PROMOTIONS</a></li>
+        <!-- <li><a href="/deals/promotions">PROMOTIONS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
